--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    border: 1px solid black;
+    padding: 15px 0 15px 0;
 }
+button{
+    margin-right: 25px;
+    border: 0.5px solid black;
+    background-color: white;
+    padding: 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+.CardContainer{
+    padding-top: 35px;
+    padding-bottom: 35px;
+    width: 95%;
+    border: 1px solid black;
 
-.App-link {
-  color: #61dafb;
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-auto-rows: 350px;
+    justify-content: center;
+    gap: 35px;
+    
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Card{
+    width: 400px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+}
+.active{
+    color: gold;
+}
+img{
+    margin-top: 15px;
+}
+.footer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    border: 1px solid black;
 }
